--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server",
-    "client": "npm start --prefix client"
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +19,6 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "braintree": "^2.23.0",
-    "concurrently": "^6.0.2",
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -25,7 +26,10 @@
     "heroku": "^7.52.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
-    "nodemon": "^2.0.4",
     "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.2",
+    "nodemon": "^2.0.7"
   }
 }
